// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`join game a player can't join a game she has already joined 1`] = `
Object {
  "data": Object {
    "gameJoinGame": Object {
      "type": "GAME_ALREADY_JOINED",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`join game a player can't join a game with already the maximum number of player 1`] = `
Object {
  "data": Object {
    "gameJoinGame": Object {
      "type": "MAXIMUM_NUMBER_OF_PLAYERS_REACHED",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
